add logs and improve async call
remove .parallel() call due to its issues