@@ -8,6 +8,8 @@ import hu.bca.library.models.BookWithPublishDate;
 import hu.bca.library.repositories.AuthorRepository;
 import hu.bca.library.repositories.BookRepository;
 import hu.bca.library.services.BookService;
+import lombok.extern.log4j.Log4j2;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
@@ -15,6 +17,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.regex.Matcher;
@@ -23,6 +26,7 @@ import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
+@Log4j2
 public class BookServiceImpl implements BookService {
 
     private final Pattern pattern = Pattern.compile("\\b\\d{4}\\b");
@@ -59,27 +63,36 @@ public class BookServiceImpl implements BookService {
 
 
     @Override
-    public Collection<Book> updateAllWithYear() {
+    public Collection<Book> updateAllWithPublishYear() {
+        log.info("Fetching all books for update with publish year");
         Iterable<Book> books = bookRepository.findAll();
         List<Book> booksToSave = StreamSupport.stream(books.spliterator(), false)
-          .parallel()
           .map(openLibraryClientAsync::getBookWithFirstPublishDateAsync)
+          .map(cf -> cf.thenApply(this::getBookWithPublishedYear))
           .map(CompletableFuture::join)
-          .map(this::getBookWithPublishedYear)
-          .collect(Collectors.toList());
+          .toList();
 
         Iterable<Book> savedBooks = bookRepository.saveAll(booksToSave);
-        return StreamSupport.stream(savedBooks.spliterator(), false)
+        List<Book> result = StreamSupport.stream(savedBooks.spliterator(), false)
           .toList();
+        log.info(String.format("Books saved with updated publish year, cnt: %d", result.size()));
+        return result;
     }
 
     private Book getBookWithPublishedYear(final BookWithPublishDate bookWithPublishDate) {
-        if (!StringUtils.hasLength(bookWithPublishDate.firstPublishDateWrapper().getFirstPublishDate())) {
+        final String workId = bookWithPublishDate.book().getWorkId();
+        final String firstPublishDate = bookWithPublishDate.firstPublishDateWrapper().getFirstPublishDate();
+        if (!StringUtils.hasLength(firstPublishDate)) {
+            log.info(String.format("No first publish date found for book with workId: %s", workId));
             return bookWithPublishDate.book();
         }
-        Matcher matcher = pattern.matcher(bookWithPublishDate.firstPublishDateWrapper().getFirstPublishDate());
+        log.info(String.format("First publish date of %s found for book with workId: %s",
+          firstPublishDate,
+          workId));
+        Matcher matcher = pattern.matcher(firstPublishDate);
         if (matcher.find()) {
             var year = matcher.group();
+            log.info(String.format("Year %s extracted for book with workId %s", year, workId));
             bookWithPublishDate.book().setYear(Integer.valueOf(year));
         }
         return bookWithPublishDate.book();
